--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "HENUWebFSHomework",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/JS/script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
